[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grokpediapy"
version = "0.1.0"
description = "Small secure retrieval stub for demos and testing"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []

[project.scripts]
grokpediapy = "grokpediapy.cli:main"
