[tool.poetry]
name = "grokpediapy"
version = "0.1.0"
description = "A secure CLI tool to retrieve content from Grokpedia."
authors = ["JediZPython <secure-dev@example.com>"]
readme = "README.md"
packages = [{include = "grokpediapy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.7.0"

[tool.poetry.scripts]
grokpediapy = "grokpediapy.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"